crates/macros/tests/regression/ui/purity_read_only_value_self.rs
use jacquard_macros::purity;

#[purity(read_only)]
pub trait InvalidReadOnlyTrait {
    fn consume(self);
}

fn main() {}
